# rtic-usb-midi

./: Cargo.toml  memory.x
.cargo/: config.toml
src/: lib.rs  sync.rs
testsuite/: Cargo.toml
testsuite/src/: lib.rs
testsuite/tests/: test.rs
