[package]
# TODO fix `authors` and `name` if you didn't use `cargo-generate`
authors = ["deltronix <douwe@deltronix.nl>"]
name = "rtic-usb-midi"
edition = "2021"
version = "0.1.0"

[workspace]
members = ["testsuite"]

[dependencies]
defmt = "0.3.4"
defmt-rtt = "0.3.2"
panic-probe = { version = "0.3", features = ["print-defmt"] }
cortex-m-rtic = "1.1"
cortex-m = {version = "0.7", features = ["critical-section-single-core"]}
stm32h7xx-hal = {version = "0.14.0", features = ["stm32h743v", "rt", "usb_hs"]}
usb-device = {version = "0.2.9", features = ["defmt"] }
midly-usb = {path = "../midly-usb/", features = ["embedded"], default-features = false }
systick-monotonic = "1.0.1"

# TODO enter your HAL here
# some-hal = "1.2.3"
# TODO add a monotonic if you use scheduling
# some-monotonic = "1.2.3"

[dev-dependencies]
defmt-test = "0.3"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 'z'         # <-
overflow-checks = true  # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

# uncomment this to switch from the crates.io version of defmt to its git version
# check app-template's README for instructions
#[patch.crates-io]
#defmt = { git = "https://github.com/knurling-rs/defmt", rev = "3" }
#defmt-rtt = { git = "https://github.com/knurling-rs/defmt", rev = "3" }
#defmt-test = { git = "https://github.com/knurling-rs/defmt", rev = "3" }
#panic-probe = { git = "https://github.com/knurling-rs/defmt", rev = "3" }
